--- a/src/app/components/seller/unit-details/unit-details.component.html
+++ b/src/app/components/seller/unit-details/unit-details.component.html
@@ -80,7 +80,7 @@
                                 </div>
                             </div>
                             <p class="price">
-                                {{numberWithCommas(getPrice())}} {{'propertyDetails.EGP' | translate}}
+                                {{numberWithCommas(getPrice())}} {{ getCurrency() }}
                             </p>
                             <div class="row justify-content-center" style="padding: 10px;">
                                 <span class="location" style="color: #ABABB6;">
