--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1654,3 +1654,7 @@ nav{
     text-align: left;
 }
 
+.app-header .ng-dropdown-panel .ng-dropdown-panel-items .ng-option{
+    display: flex !important;
+    align-items: center !important;
+}
