--- a/src/app/shared/components/developers/developers.component.scss
+++ b/src/app/shared/components/developers/developers.component.scss
@@ -475,6 +475,41 @@
     
             }
         }
+
+        .not-found{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 50px;
+
+            @media (max-width: 450px) {
+                padding: 75px 25px 25px 25px;
+            }
+            .not-found-image{
+                width: 500px;
+    
+                @media (max-width: 450px) {
+                    width: -webkit-fill-available;
+                }
+            }
+    
+            .not-found-card{
+                width: 100%;
+                padding: 10px 0px;
+    
+                .not-found{
+                    display: block;
+                    text-align: center;
+                    padding: 10px 0px;
+                    font-size: 22px;
+    
+                    &.sub{
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+
     }
 
     .button-holder{
