--- a/src/app/shared/components/electronic-advisor/electronic-advisor.component.scss
+++ b/src/app/shared/components/electronic-advisor/electronic-advisor.component.scss
@@ -44,7 +44,8 @@
 
             .section-head-center {
                 color: white;
-
+                padding: 0px;
+                
                 span{
                     background: white;
                 }
